# KinectToPCL

./: .gitignore  CMakeLists.txt  ClusterDivider.cpp  ClusterDivider.h  EntropyFilterBuilder.cpp  EntropyFilterBuilder.h  IPointCloudDivider.h  ImageRebuild.cpp  ImageRebuild.h  KinectParameters.cpp  KinectParameters.h  KinectToPCL  LineFilter.cpp  LineFilter.h  LineFilterBuilder.cpp  LineFilterBuilder.h  LlinefilterBuilder.cpp  LlinefilterBuilder.h  PointCloudBuilder.cpp  PointCloudBuilder.h  PointCloudUtilities.cpp  PointCloudUtilities.h  ProjectionDivider.cpp  ProjectionDivider.h  README.md  calibration.py  common.h  main.cpp
